--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
 							and details on how to install and update on the
 							<a href="installation.html">Installation</a> page.
 						</p>
+						
+						<p>
+							If you use the EQcorrscan package in your work please
+							cite the following paper:
+							Chamberlain, C. J., Hopp, C. J., Boese, C. M., Warren-Smith, E.,
+							Chambers, D., Chu, S. X., Michailos, K., Townend, J., EQcorrscan:
+							Repeating and near-repeating earthquake detection and analysis in 
+							Python. Seismological Research Letters, Accepted 2017
+						</p>
 						<p><a href="https://gitter.im/eqcorrscan/EQcorrscan?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/eqcorrscan/EQcorrscan" /></a>
 							<a href="https://travis-ci.org/eqcorrscan/EQcorrscan"><img src="https://travis-ci.org/eqcorrscan/EQcorrscan.svg?branch=master" alt="TravisCIStatus" /></a>
 							<a href="https://ci.appveyor.com/project/calum-chamberlain/eqcorrscan-jsycv/branch/master"><img src="https://ci.appveyor.com/api/projects/status/b0924mp0uwwyap3d/branch/master?svg=true" alt="Build status" /></a>
