--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						
 						<p>
 							If you use the EQcorrscan package in your work please
-							cite the following paper:
+							cite the following paper:<br>
 							Chamberlain, C. J., Hopp, C. J., Boese, C. M., Warren-Smith, E.,
 							Chambers, D., Chu, S. X., Michailos, K., Townend, J., EQcorrscan:
 							Repeating and near-repeating earthquake detection and analysis in 
